--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.6.0
   google_fonts: ^6.1.0
+  image_picker: ^1.0.5
 
 dev_dependencies:
   flutter_test:
